# sac_mlir_learning

./: CMakeLists.txt  README.md
Ch1-WritingOurFirstPass/: CMakeLists.txt
Ch1-WritingOurFirstPass/lib/: CMakeLists.txt
Ch1-WritingOurFirstPass/tests/: .lit_test_times.txt  affine_loop_unroll.mlir  lit.cfg.py  mul_to_add.mlir
Ch1-WritingOurFirstPass/tests/Output/: affine_loop_unroll.mlir.tmp
Ch1-WritingOurFirstPass/tools/: CMakeLists.txt  tutorial-opt.cpp
Ch2-UsingTableGenForPasses/: CMakeLists.txt
Ch2-UsingTableGenForPasses/include/: CMakeLists.txt
Ch2-UsingTableGenForPasses/lib/: CMakeLists.txt
Ch2-UsingTableGenForPasses/tests/: .lit_test_times.txt  affine_loop_unroll.mlir  lit.cfg.py
Ch2-UsingTableGenForPasses/tools/: CMakeLists.txt  tutorial-opt.cpp
Ch3-DefiningANewDialect/: CMakeLists.txt
Ch3-DefiningANewDialect/include/: CMakeLists.txt
Ch3-DefiningANewDialect/include/mlir-tutorial/Dialect/Poly/: PolyDialect.td  PolyOps.hpp  PolyOps.td
Ch3-DefiningANewDialect/lib/: CMakeLists.txt
Ch3-DefiningANewDialect/lib/Dialect/Poly/: PolyDialect.cpp
Ch3-DefiningANewDialect/tests/: .lit_test_times.txt  lit.cfg.py  poly_syntax.mlir
Ch3-DefiningANewDialect/tests/Output/: poly_syntax.mlir.tmp
Ch3-DefiningANewDialect/tools/: tutorial-opt.cpp
Ch4-UsingTraits/: CMakeLists.txt
Ch4-UsingTraits/lib/: CMakeLists.txt
Ch4-UsingTraits/tests/: .lit_test_times.txt  code_motion.mlir  control_flow_sink.mlir  cse.mlir  lit.cfg.py  poly_syntax.mlir
Ch4-UsingTraits/tests/Output/: cse.mlir.tmp  poly_canonicalize.mlir.tmp
Ch4-UsingTraits/tools/: tutorial-opt.cpp
Ch5-FoldersAndConstantPropagation/: CMakeLists.txt
Ch5-FoldersAndConstantPropagation/tests/: .lit_test_times.txt  code_motion.mlir  control_flow_sink.mlir  cse.mlir  lit.cfg.py  poly_canonicalize.mlir  poly_syntax.mlir  sccp.mlir
Ch5-FoldersAndConstantPropagation/tests/Output/: control_flow_sink.mlir.tmp  poly_syntax.mlir.tmp
Ch5-FoldersAndConstantPropagation/tools/: CMakeLists.txt
Ch6-Verifiers/: CMakeLists.txt
Ch6-Verifiers/include/: CMakeLists.txt
Ch6-Verifiers/lib/: CMakeLists.txt
Ch6-Verifiers/tests/: .lit_test_times.txt  code_motion.mlir  control_flow_sink.mlir  cse.mlir  lit.cfg.py  poly_canonicalize.mlir  poly_syntax.mlir  poly_verifier.mlir  sccp.mlir
Ch6-Verifiers/tests/Output/: cse.mlir.tmp  poly_canonicalize.mlir.tmp  sccp.mlir.tmp
Ch7-CanonicalizersAndDeclarativeRewritePatterns/: CMakeLists.txt
Ch7-CanonicalizersAndDeclarativeRewritePatterns/include/: CMakeLists.txt
Ch7-CanonicalizersAndDeclarativeRewritePatterns/tests/: code_motion.mlir  control_flow_sink.mlir  cse.mlir  lit.cfg.py  poly_canonicalize.mlir  poly_syntax.mlir  poly_verifier.mlir  sccp.mlir
Ch7-CanonicalizersAndDeclarativeRewritePatterns/tests/Output/: poly_syntax.mlir.tmp  poly_verifier.mlir.tmp
Ch8-DialectConversion/: CMakeLists.txt
Ch8-DialectConversion/include/: CMakeLists.txt
Ch8-DialectConversion/lib/: CMakeLists.txt
Ch8-DialectConversion/tests/: .lit_test_times.txt  code_motion.mlir  control_flow_sink.mlir  cse.mlir  lit.cfg.py  poly_canonicalize.mlir  poly_syntax.mlir  poly_to_standard.mlir  poly_verifier.mlir  sccp.mlir
Ch8-DialectConversion/tests/Output/: code_motion.mlir.tmp  poly_syntax.mlir.tmp  poly_to_standard.mlir.tmp  poly_verifier.mlir.tmp
Ch8-DialectConversion/tools/: tutorial-opt.cpp
Ch9-LowerPolyToLLVM/: CMakeLists.txt
Ch9-LowerPolyToLLVM/tests/: .lit_test_times.txt  code_motion.mlir  control_flow_sink.mlir  cse.mlir  lit.cfg.py  poly_canonicalize.mlir  poly_syntax.mlir  poly_to_llvm.mlir  poly_to_standard.mlir  poly_verifier.mlir  sccp.mlir
Ch9-LowerPolyToLLVM/tests/Output/: control_flow_sink.mlir.tmp  poly_to_llvm.mlir.tmp  poly_verifier.mlir.tmp
Ch9-LowerPolyToLLVM/tools/: tutorial-opt.cpp
cmake/: Compiler.cmake  Logging.cmake
scripts/: build.sh
(+32 files in other folders)
